20 September 2023
- Added animal milking gear
- Changed breast milking output if Onslort's fork is active to human milk
- Removed support for ED86's milkable colonists as it is not updated for 1.4 and Onslort's is the most updated version
- Updated README.md

27 July 2023
- Fixed some shit
- Archotech bits now give 20x because I think it's funny

16 June 2023
- Changed LM_PenisMilkingHediff hungerRateFactorOffset from 0.2 to 0.1
- Changed LM_PenisMilkingHediff moving capacity from -0.2 to -0.1
- Changed LM_BreastMilkingHediff hungerRateFactorOffset from 0.2 to 0.14
- Changed LM_BreastMilkingHediff consciousness capacity from -0.2 to 0.1
- Updated README.md

9 March 2023
- Added support for ED86's Milkable Colonists (rjw.milk.humanoid)
- Milking apparel no longer counts as clothing for nudists

1 November 2022
- Sex need becomes fully satisfied when milked
- Messy quirk slightly increases penis milking amount
- Added Biotech lactation support for breast milking
- Added three new traits that modify milking amount
- Slight balance changes

30 October 2022
- Updated for 1.4
- Updated dragon cum's texture path
- Changed dragon cum's nutrition from 1.0 to 0.5
- Removed lactation from Milkable Colonists affecting semen production
- Improved bools
- Fixed errors about missing ThingDefs